--- a/.github/workflows/tf_workflow_plan_apply.yml
+++ b/.github/workflows/tf_workflow_plan_apply.yml
@@ -17,11 +17,23 @@ on:
         type: string
         description: 'Name of the Terraform Infra Repository where HCL code resides.'
 
+      infra_repo_ref:
+        required: false
+        type: string
+        default: main
+        description: 'The branch, tag or commit SHA to checkout. Defaults to main.'
+
       #Terraform Config Repository
       config_repo:
         required: true
         type: string
         description: 'Name of the Terraform Config Repository where JSON configurations resides.'
+
+      config_repo_ref:
+        required: false
+        type: string
+        default: main
+        description: 'The branch, tag or commit SHA to checkout. Defaults to main.'
 
       #Terraform Configuration
       config_directory:
