--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -80,10 +80,17 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
 
-      - name: Install JSON Merge and Validation dependencies
+      - name: Set up a Python virtual environment
         run: |
+          python -m venv venv
+          source venv/bin/activate
           python -m pip install --upgrade pip
           pip install glob jsonmerge
+
+      - name: Install JSON Merge and Validation dependencies
+        run: |
+          python -m pip install --upgrade pip --user
+          python -m pip install glob jsonmerge --user
 
       - name: Merge and Validate JSON configurations
         run: |
