--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -101,13 +101,17 @@ jobs:
 
           # Get workflow inputs
           config_directory = '${{ inputs.config_directory }}'
+          print(f"Config directory: {config_directory}")
 
           # Helper function to load and validate JSON configuration
           def load_json(pattern):
               configs = {}
               for file_path in glob(pattern, recursive=True):
+                  print(f"Found JSON file: {file_path}") 
                   try:
                       with open(file_path, 'r') as f:
+                          config = json.load(f)
+                          print(f"Loaded JSON configuration from {file_path}: {config}")
                           configs.update(json.load(f))
                   except json.JSONDecodeError as e:
                       print(f"JSON syntax error in {file_path}: {e}")
@@ -119,6 +123,10 @@ jobs:
           config_pattern = os.path.join('config', 'config', config_directory, '*.json')
           local_pattern = os.path.join('infra', 'config', config_directory, '*.json')
 
+          print(f"Override pattern: {override_pattern}")
+          print(f"Config pattern: {config_pattern}")
+          print(f"Local pattern: {local_pattern}")
+
           # Load and validate configurations
           local_config = load_json(local_pattern) if os.path.exists(local_pattern) else {}
           config = load_json(config_pattern) if os.path.exists(config_pattern) else {}
@@ -126,6 +134,7 @@ jobs:
 
           # Merge configurations
           merged_config = merge(merge(local_config, config), override_config)
+          print(f"Merged configuration: {merged_config}")
 
           # Write terraform.tfvars.json
           tfvars_path = os.path.join(os.environ['GITHUB_WORKSPACE'], 'terraform.tfvars.json')
