--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -101,14 +101,14 @@ jobs:
 
           # Helper function to load and validate JSON configuration
           def load_json(pattern):
-              configs = {}
+              configs = []
               for file_path in glob(pattern, recursive=True):
-                  print(f"Found JSON file: {file_path}") 
+                  print(f"Found JSON file: {file_path}")
                   try:
                       with open(file_path, 'r') as f:
                           config = json.load(f)
+                          configs.append(config)
                           print(f"Loaded JSON configuration from {file_path}: {config}")
-                          configs.update(json.load(f))
                   except json.JSONDecodeError as e:
                       print(f"JSON syntax error in {file_path}: {e}")
                       exit(1)
@@ -124,12 +124,14 @@ jobs:
           print(f"Local pattern: {local_pattern}")
 
           # Load and validate configurations
-          local_config = load_json(local_pattern) if os.path.exists(local_pattern) else {}
-          config = load_json(config_pattern) if os.path.exists(config_pattern) else {}
-          override_config = load_json(override_pattern) if os.path.exists(override_pattern) else {}
+          local_configs = load_json(local_pattern)
+          configs = load_json(config_pattern)
+          override_configs = load_json(override_pattern)
 
           # Merge configurations
-          merged_config = merge(merge(local_config, config), override_config)
+          merged_config = {}
+          for config in local_configs + configs + override_configs:
+              merged_config = merge(merged_config, config)
           print(f"Merged configuration: {merged_config}")
 
           # Write terraform.tfvars.json
