--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -61,6 +61,18 @@ jobs:
           echo "GITHUB_TOKEN=${{ secrets.github_pat }}" >> $GITHUB_ENV
           echo "GITHUB_OWNER=${{ inputs.github_owner }}" >> $GITHUB_ENV
 
+      - name: Install tree and display directory structure
+        run: |
+          if ! command -v tree &> /dev/null; then
+            sudo apt-get update
+            sudo apt-get install -y tree
+          fi
+
+          echo "Displaying tree structure of the workspace:"
+          workspace="${{ github.workspace }}"
+          tree "${workspace}" -L 5 -h
+        shell: bash
+
       - name: Checkout infra repository
         uses: actions/checkout@v4
         with:
@@ -77,13 +89,8 @@ jobs:
           token: ${{ secrets.github_pat }}
           path: config-repo
 
-      - name: Install tree and display directory structure
+      - name: After tree
         run: |
-          if ! command -v tree &> /dev/null; then
-            sudo apt-get update
-            sudo apt-get install -y tree
-          fi
-
           echo "Displaying tree structure of the workspace:"
           workspace="${{ github.workspace }}"
           tree "${workspace}" -L 5 -h
