--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -135,6 +135,7 @@ jobs:
         run: |
           import json
           import os
+          import collections.abc
           from glob import glob
           from jsonmerge import merge
 
@@ -158,6 +159,14 @@ jobs:
                       exit(1)
               return configs
 
+          def deep_update(d, u):
+            for k, v in u.items():
+                if isinstance(v, collections.abc.Mapping):
+                    d[k] = deep_update(d.get(k, {}), v)
+                else:
+                    d[k] = v
+            return d
+
           # Paths to JSON file patterns
           override_pattern = os.path.join(workspace, 'config_override', config_directory, '*.json')
           config_pattern = os.path.join(workspace, 'config-repo', 'config', config_directory, '*.json')
@@ -174,8 +183,9 @@ jobs:
 
           # Merge configurations
           merged_config = {}
-          for config in local_configs + configs + override_configs:
-              merged_config = merge(merged_config, config)
+          all_configs = local_configs + configs + override_configs
+          for config in all_configs:
+              merged_config = deep_update(merged_config, config)
           print(f"Merged configuration: {merged_config}")
 
           # Write terraform.tfvars.json
