--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -128,8 +128,7 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-          python -m pip install --upgrade pip
-          pip install python-hcl2
+          python -m pip install python-hcl2 --upgrade pip
 
       - name: Merge and Validate JSON configurations
         run: |
