--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -128,7 +128,7 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-          python -m pip install python-hcl2 --upgrade pip
+          python -m pip install python-hcl2==4.3.3 --upgrade pip
 
       - name: Merge and Validate JSON configurations
         run: |
