--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -128,8 +128,8 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-          python -m pip install --upgrade pip
-          python -m pip install python-hcl2
+          python3.11 -m pip install --upgrade pip
+          python3.11 -m pip install python-hcl2
 
       - name: Merge and Validate JSON configurations
         run: |
