--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -220,7 +220,7 @@ jobs:
           all_configs = local_configs + configs + override_configs
           for config in all_configs:
               merged_config = deep_update(merged_config, config)
-          print(f"Merged configuration: {merged_config}")
+          print(f"Merged configuration: {json.dumps(merged_config, indent=4)}")
 
           # Write terraform.tfvars.json
           tfvars_path = os.path.join(os.environ['GITHUB_WORKSPACE'], 'terraform.tfvars.json')
