--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -11,6 +11,19 @@ on:
         default: 'ubuntu-latest'
         description: 'Either the type of runner or the label of the self hosted runner to be used. Defaults to ubuntu-latest.'
 
+      #Terraform Workflows Repository
+      workflows_repo:
+        required: true
+        type: string
+        default: 'github-workflows'
+        description: 'Name of the Github Workflows Repository where the Python codes resides.'
+
+      workflows_repo_ref:
+        required: false
+        type: string
+        default: main
+        description: 'The branch, tag or commit SHA to checkout. Defaults to main.'
+
       #Terraform Infra Repository
       infra_repo:
         required: true
@@ -80,6 +93,14 @@ jobs:
           tree -a "${workspace}" -L 5 -h
         shell: bash
 
+      - name: Checkout workflows repository
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ inputs.github_owner }}/${{ inputs.workflows_repo }}
+          ref: ${{ inputs.workflows_repo_ref}}
+          token: ${{ secrets.github_pat }}
+          path: workflows-repo
+
       - name: Checkout infra repository
         uses: actions/checkout@v4
         # with:
@@ -134,7 +155,7 @@ jobs:
 
       - name: Merge and Validate JSON configurations
         run: |
-          CONFIG_DIRECTORY='${{ inputs.config_directory }}' python3.11 ./scripts/merge-configs.py 
+          CONFIG_DIRECTORY='${{ inputs.config_directory }}' python3.11 ${workspace}/workflows-repo/scripts/merge-configs.py 
 
       - name: Upload terraform.tfvars.json as artifact
         uses: actions/upload-artifact@v4
