--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -13,7 +13,7 @@ on:
 
       #Terraform Workflows Repository
       workflows_repo:
-        required: true
+        required: false
         type: string
         default: 'github-workflows'
         description: 'Name of the Github Workflows Repository where the Python codes resides.'
