--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -152,6 +152,7 @@ jobs:
         run: |
           python${{ inputs.python_version }} --version
 
+          python${{ inputs.python_version }} -m ensurepip --upgrade
           python3 -m pip install --no-cache-dir --upgrade pip
           python${{ inputs.python_version }} -m pip install --no-cache-dir python-hcl2
 
