--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -152,12 +152,12 @@ jobs:
         run: |
           python${{ inputs.python_version }} --version
 
-          python${{ inputs.python_version }} -m ensurepip --upgrade
-          python3 -m pip install --no-cache-dir --upgrade pip
-          python${{ inputs.python_version }} -m pip install --no-cache-dir python-hcl2
-
           python${{ inputs.python_version }} -m venv venv
           source venv/bin/activate
+
+          # python${{ inputs.python_version }} -m ensurepip --upgrade
+          python3 -m pip install --no-cache-dir --upgrade pip
+          python${{ inputs.python_version }} -m pip install --no-cache-dir python-hcl2 --target .venv/Lib/site-packages
 
           CONFIG_DIRECTORY='${{ inputs.config_directory }}' python3.11 ${{ github.workspace }}/workflows-repo/scripts/merge-configs.py
         shell: /usr/bin/bash -e {0}
