move python to separate folder

--- a/.github/workflows/tf_step_config.yml
+++ b/.github/workflows/tf_step_config.yml
@@ -157,7 +157,7 @@ jobs:
 
           # python${{ inputs.python_version }} -m ensurepip --upgrade
           python3 -m pip install --no-cache-dir --upgrade pip
-          python${{ inputs.python_version }} -m pip install --no-cache-dir python-hcl2 --target .venv/Lib/site-packages
+          python${{ inputs.python_version }} -m pip install --no-cache-dir python-hcl2 --target venv/Lib/site-packages
 
           CONFIG_DIRECTORY='${{ inputs.config_directory }}' python3.11 ${{ github.workspace }}/workflows-repo/scripts/merge-configs.py
         shell: /usr/bin/bash -e {0}
